--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
-    <h1>this is test</h1>
+<body bgcolor="cccccc">
+    <h1>this is a heading</h1>
     <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, vero!</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis quas modi ex necessitatibus dolores soluta nemo cupiditate quod autem ullam!
     </p>
